--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -36,6 +36,7 @@
 \let\textss\textsuperscript
 
 \usepackage{layout}
+\renewcommand{\thesubparagraph}{\theparagraph.\roman{subparagraph}}
 \renewcommand{\theparagraph}{\thesubsubsection.\alph{paragraph}}
 \renewcommand{\thechapter}{\Roman{chapter}}
 \renewcommand{\thesection}{\thechapter.\arabic{section}}
