--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -186,8 +186,8 @@
 	\hypersetup{pdfborder = {0 0 0},%borderless hyperlinks
     	colorlinks = true,
     	citecolor=PythonGreen,
-    	urlcolor = MatlabBlue,
-    	linkcolor = MatlabOrange}
+    	urlcolor = MatlabOrange,
+    	linkcolor = MatlabBlue}
 \pagenumbering{arabic}
 \usepackage{fancyhdr}
 \usepackage{siunitx}
@@ -321,9 +321,9 @@
 	
 }
     \vfill
-        \hrule\leavevmode\\[0.3cm]
-        \textbf{\'Etude de l'impact de la convection naturelle sur la distribution de température dans le noyau d'une pompe à chaleur thermoacoustique compacte coaxiale} \\[0.65cm]
-        \hrule
+%        \hrule\leavevmode\\[0.3cm]
+        \textbf{\'Etude de l'impact de la convection naturelle sur la distribution de température dans le noyau d'une pompe à chaleur thermoacoustique compacte coaxiale} %\\[0.65cm]
+%        \hrule
     \vfill
 {\normalsize
 	Direction de thèse : 
